--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "sort-by": "^0.0.2"
